# DeltaRepo

./: CMakeLists.txt  README.md  VERSION.cmake  deltarepo.spec
acceptance_tests/: README.md  test.sh
acceptance_tests/repos/: README.md
deltarepo/: CMakeLists.txt  __init__.py  applicator.py  cleaners.py  common.py  const.py  const.py.in  deltametadata.py  deltarepos.py  errors.py  generator.py  plugins.py  updater_common.py  util.py  xmlcommon.py
dnf-plugins/: CMakeLists.txt  deltarepo.py
doc/: CMakeLists.txt  conf.py  deltarepos.rst  index.rst
example/: example.sh
example/deltarepos/: gen.sh
tests/: CMakeLists.txt  fixtures.py  test_cleaners.py  test_deltametadata.py  test_deltarepos.py  test_updater_common.py  test_util.py
tests/testdata/deltarepos/01_01/repodata/: e0bfb4fa6401b1c928c8e335fa5cb3d09ec820f5c8caa0629ca1bf549d886641-deltametadata.xml.xz  repomd.xml
tests/testdata/deltarepos/01_02/repodata/: 18c1263b4329446f166e0a08ef39ce0081409d7e4ba8429812637db544dec7dd-deltametadata.xml.xz  8dbd80c14e836896b256a7932f391c41251ffd5df032282af276ecb3b59f81ab-comps.xml.xz  repomd.xml
tests/testdata/deltarepos/02_01/repodata/: f7cae390b70f5a434b5e87d644ebcd49d2bfbc482141f971aa344423eb4f8dd1-deltametadata.xml.xz  repomd.xml
tests/testdata/repo_00/repodata/: 1bd9fdbfe2f9cc6057d673ef527820547fda227524976fe7bbea9ec21b3c428a-filelists.sqlite.bz2  52f9afbf64a80a9d889de55705e348f6459e0c0d5b0ac88e11b9857501ad9586-primary.sqlite.bz2  f08999ea754b3020147fd356596e2cff431f77c641b6df9a380a8e967a9d50f5-other.sqlite.bz2  repomd.xml
tests/testdata/repo_02/repodata/: 20f8ef9eb3b8eb1c59e5198dd21290a69143c8f38154935b14850f1a4595ad74-primary.sqlite.bz2  ae4e79451d16fb89ae9ba9140cc152911f78c48a0d174e10f7a9906f751dd3e0-other.sqlite.bz2  b61e98a6dd14a2a32555078a32d9cb297253cf512bdca307bddb3611dbc9ae07-filelists.sqlite.bz2  repomd.xml
utils/: README.md  cleanup.sh  make_rpm.sh  make_tarball.sh
